# gpgpu-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain
example/: Cargo.toml  build.rs  main.rs
example/gpu/: Cargo.toml
gpgpu-backend/: Cargo.toml  backend.rs
gpgpu-macro/: Cargo.toml  lib.rs
